<resources>
    <string name="app_name">Two Activity</string>
    <string name="button_main">Send</string>
    <string name="text_header">Message Received</string>
    <string name="message_received">Message Received</string>
    <string name="editText_main">Enter Your Message Here</string>
    <string name="button_second">return reply</string>
    <string name="editText_second">Enter Your Reply Here</string>
    <string name="text_header_reply">text_header_reply</string>
</resources>
