<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="#D0E3E6"
    android:visibility="visible"
    tools:context=".SecondActivity"
    tools:visibility="visible">

    <TextView
        android:id="@+id/text_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="42dp"
        android:layout_marginLeft="42dp"
        android:background="#00F3F1F1"
        android:text="@string/text_header"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/text_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_header"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/button_second"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:hint="@string/button_second"
        android:onClick="returnReply"
        android:text="@string/button_second" />

    <EditText
        android:id="@+id/editText_second"
        android:layout_width="285dp"
        android:layout_height="59dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="4dp"
        android:layout_toStartOf="@+id/button_second"
        android:layout_toLeftOf="@+id/button_second"
        android:hint="@string/editText_second"
        android:inputType="textLongMessage" />

</RelativeLayout>